feat(messages): удаление функционала сообщений

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,10 +12,10 @@
     <item android:title="Объявление"
         android:icon="@drawable/add_post"
         android:id="@+id/nav_new_item"/>
-    <item android:title="Сообщения"
-        android:icon="@drawable/message"
-        android:id="@+id/nav_messages"/>
-    <item android:title="Профиль"
-        android:icon="@drawable/person"
-        android:id="@+id/nav_profile"/>
+<!--    <item android:title="Сообщения"-->
+<!--        android:icon="@drawable/message"-->
+<!--        android:id="@+id/nav_messages"/>-->
+<!--    <item android:title="Профиль"-->
+<!--        android:icon="@drawable/person"-->
+<!--        android:id="@+id/nav_profile"/>-->
 </menu>
