--- a/app/src/main/res/layout/fragment_new_item.xml
+++ b/app/src/main/res/layout/fragment_new_item.xml
@@ -1,14 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.NewItemFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingHorizontal="10dp">
+
+            <!-- Card with Image and Button -->
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="0dp">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp"
+                        android:background="@color/light_gray"
+                        android:src="@drawable/ic_launcher_foreground"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/addPicButton"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:padding="10dp"
+                        app:cornerRadius="2dp"
+                        app:icon="@drawable/add"
+                        app:iconGravity="textStart"
+                        app:iconSize="100dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:strokeColor="@color/gray" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <!-- Input Fields -->
+            <EditText
+                android:id="@+id/bookTitleInput"
+                style="@style/DefaultEditTextStyle"
+                android:hint="Название книги" />
+
+            <EditText
+                android:id="@+id/bookAuthorInput"
+                style="@style/DefaultEditTextStyle"
+                android:hint="Автор книги" />
+
+            <EditText
+                android:id="@+id/bookDescriptionInput"
+                style="@style/DefaultEditTextStyle"
+                android:gravity="start|top"
+                android:hint="Описание книги"
+                android:inputType="textMultiLine"
+                android:minHeight="100dp"
+                android:singleLine="false" />
+
+
+            <EditText
+                android:id="@+id/userNameInput"
+                style="@style/DefaultEditTextStyle"
+                android:hint="Как к вам обращаться" />
+
+            <EditText
+                android:id="@+id/userNumberInput"
+                style="@style/DefaultEditTextStyle"
+                android:hint="Номер телефона"
+                android:inputType="phone" />
+
+            <com.example.polochka.CustomMapView
+                android:id="@+id/mapview"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                app:layout_constraintTop_toBottomOf="@id/userNumberInput" />
+
+            <TextView
+                android:id="@+id/cityLabel"
+                style="@style/DefaultEditTextStyle" />
+            <TextView
+                android:id="@+id/districtLabel"
+                style="@style/DefaultEditTextStyle"/>
+
+            <Button
+                android:id="@+id/itemMessageBtn"
+                style="@style/MessageButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_marginTop="10dp"
+                android:width="0dp"
+                android:text="Создать объявление" />
+
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
 </FrameLayout>
