--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="green">#6DC992</color>
     <color name="primary">#A06DC9</color>
     <color name="gray">#5D5D5D</color>
+    <color name="light_gray">#F3EEF7</color>
+
 </resources>
