--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme -->
-    <style name="Base.Theme.Polochka" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Base.Theme.Polochka" parent="Theme.Material3.Light.NoActionBar">
         <!-- Customize your light theme here -->
         <item name="android:textColor">@color/black</item>
 
