feat: загрузка и отправка изображений

--- a/app/src/main/res/layout/fragment_new_item.xml
+++ b/app/src/main/res/layout/fragment_new_item.xml
@@ -28,7 +28,8 @@
                     android:layout_height="wrap_content">
 
                     <ImageView
-                        android:id="@+id/imageView3"
+                        android:scaleType="centerCrop"
+                        android:id="@+id/imagePreview"
                         android:layout_width="match_parent"
                         android:layout_height="300dp"
                         android:background="@color/light_gray"
