--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -44,13 +44,16 @@
                 android:id="@+id/bookDescriptionLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Описание книги"
-                android:textStyle="bold" />
+                android:text="Описание книги: "
+                android:textSize="24dp"
+/>
 
             <TextView
                 android:id="@+id/bookDescriptionText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textSize="20dp"
+
                 android:text="TextView" />
         </LinearLayout>
 
@@ -58,19 +61,27 @@
             android:id="@+id/cardProductImages"
             android:layout_width="0dp"
             android:layout_height="350dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="10dp"
-            app:cardCornerRadius="15dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="0dp"
+            app:cardCornerRadius="0dp"
             app:cardElevation="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/viewPagerProductImages"
+            <ImageView
+                android:scaleType="centerCrop"
+
+                android:id="@+id/productImage"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent">
+
+            </ImageView>
+
+<!--            <androidx.viewpager2.widget.ViewPager2-->
+<!--                android:id="@+id/viewPagerProductImages"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent" />-->
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
@@ -91,6 +102,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Example name"
+                android:textSize="26dp"
+
                 android:textStyle="bold" />
 
             <TextView
@@ -129,6 +142,39 @@
 <!--        </LinearLayout>-->
 
         <LinearLayout
+            android:id="@+id/Adress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/llAuthor">
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="10dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/adressLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Местоположение: "
+                    android:textSize="24dp"
+ />
+
+                <TextView
+                    android:id="@+id/adressText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="adressText"
+                    android:textSize="20dp" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/llAuthor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -163,13 +209,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Фамилия имя"
-                    android:textStyle="bold" />
+                    android:textSize="24dp"
+/>
 
                 <TextView
                     android:id="@+id/userNumber"
+                    android:textSize="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Фамилия имя" />
+                    android:text="89607670634" />
             </LinearLayout>
 
         </LinearLayout>
