--- a/app/src/main/res/layout/product_card.xml
+++ b/app/src/main/res/layout/product_card.xml
@@ -21,7 +21,9 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:scaleType="centerCrop"
+
+                android:id="@+id/previewImage"
                 android:layout_width="185dp"
                 android:layout_height="185dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +41,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView2">
+                app:layout_constraintTop_toBottomOf="@+id/previewImage">
 
                 <TextView
                     android:id="@+id/bookCardTitle"
