--- a/app/src/main/res/layout/main_page.xml
+++ b/app/src/main/res/layout/main_page.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0"
             android:padding="0dp"
-            app:backgroundTint="@color/white"
+            android:background="@android:color/transparent"
             app:cornerRadius="2dp"
             app:icon="@drawable/arrow_back"
             app:iconGravity="textStart"
