--- a/app/src/main/res/layout/product_card.xml
+++ b/app/src/main/res/layout/product_card.xml
@@ -49,7 +49,7 @@
                     android:layout_height="20dp"
                     android:text="TextViewццц ццццццц ц"
                     android:singleLine="true"
-                    android:textSize="18dp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:layout_marginTop="6dp"
