--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,8 @@
     <style name="Base.Theme.Polochka" parent="Theme.Material3.Light.NoActionBar">
         <!-- Customize your light theme here -->
         <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:fontWeight">400</item>
 
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
@@ -25,6 +27,7 @@
     <style name="MessageButtonStyle" parent="BaseButtonStyle">
         <item name="android:backgroundTint">@color/primary</item>
     </style>
+
 
     <style name="FavoriteButtonStyle" parent="BaseButtonStyle">
         <item name="android:backgroundTint">@color/green</item>
